--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,5 +8,4 @@ Maintainer: Tim Triche, Jr. <tim.triche@gmail.com>
 Description: Most of the hypergeometric functions available in R are either general-purpose, fixed-precision, or slower than molasses, which makes Gamma convolutions infeasible as a means of background correction for microarrays.  This package simply adapts a multiple-precision confluent hypergeometric 1F1 implementation from the MADNESS project to work with R and address the difficulty described.
 License: GPL (>= 2.0)
 LazyLoad: yes
-Depends: Rcpp (>= 0.9.0), Rmpfr
-LinkingTo: Rcpp
+Depends: gsl
