--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: rGammaGamma
 Type: Package
 Title: This is a small package to work with Gamma convolutions.
-Depends: gsl, methylumIDAT
+Depends: gsl
 LinkingTo: Rcpp
-Version: 0.9
-Date: 2010-12-20
+Version: 0.9.1
+Date: 2011-2-14
 Author: Tim Triche, Jr.
 Maintainer: Tim Triche, Jr. <tim.triche@gmail.com>
-Description: Most of the hypergeometric functions available in R are either general-purpose, fixed-precision, or slower than molasses, which makes Gamma convolutions infeasible as a means of background correction for microarrays.  This package simply adapts a multiple-precision confluent hypergeometric 1F1 implementation from the MADNESS project to work with R and address the difficulty described.
+Description: This package implements a Gamma convolution model for background.
 License: GPL (>= 2.0)
 LazyLoad: yes
