--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rGammaGamma
 Type: Package
-Title: Explicit and implicit Gamma convolutions for SNP and methylation arrays.
+Title: Gamma convolutions for methylation array background correction.
 Depends: gsl
 LinkingTo: Rcpp
-Version: 1.0.6
-Date: 2011-5-6
+Version: 1.0.7
+Date: 2011-05-09
 Author: Tim Triche, Jr.
 Maintainer: Tim Triche, Jr. <tim.triche@gmail.com>
 Description: This package implements a Gamma convolution model for background.
